--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drop-down-menu",
+  "name": "ecarrillo046-drop-down-menu",
   "version": "1.0.0",
   "description": "A drop down menu",
   "main": "index.js",
